# spell-check-api

./: Cargo.toml  Dockerfile  compose.yml
src/: main.rs  spell_check.rs
src/wordlists/: english.txt
