[package]
name = "spell-check-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
zspell = "0.5.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
